infra/k8s/policies/kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-containers
  annotations:
    policies.kyverno.io/title: Disallow Root Containers
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers must run as non-root to prevent escalation in case of compromise.
      This policy checks that runAsNonRoot is set to true at the pod or container level.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-runasnonroot
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Running as root is not allowed. Either the pod or the container must set 
          securityContext.runAsNonRoot to true.
        anyPattern:
        - spec:
            securityContext:
              runAsNonRoot: true
            containers:
            - =(securityContext):
                =(runAsNonRoot): true
        - spec:
            containers:
            - securityContext:
                runAsNonRoot: true
